# nyc_trips_questions

./: .gitignore  ANSWER1.md  ANSWER2.md  ANSWER3.md  ANSWER4.md  ANSWERS.md  LICENSE  QUESTIONS.md  README.md  pyproject.toml  requirements.txt
detectors/: __init__.py  find_outliers_duckdb.py  find_outliers_pyarrow.py  find_outliers_pyarrow_optimized.py
scripts/: benchmark.py  optimize_parquets.py  profiling.py
scripts/benchmark/: benchmark_report.html  results.json
scripts/benchmark_optimized/: benchmark_report.html  results.json
scripts/profiling/: duckdb_profile.json  profiling_report.html  pyarrow_profile.json
