[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detectors"
version = "0.1.0"
description = "NYC Taxi Trip Analysis - Multiple Implementation Strategies"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {name = "NYC Trips Team"}
]
keywords = ["taxi", "outlier-detection", "pyarrow", "duckdb", "data-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pyarrow>=23.0.0",
    "duckdb>=1.4.4",
]

[project.optional-dependencies]
benchmark = [
    "matplotlib>=3.10.8",
    "psutil>=7.2.2",
    "tqdm>=4.66.0",
    "anthropic>=0.35.0",
]
profiling = [
    "tqdm>=4.67.3",
    "anthropic>=0.79.0"
]

[project.scripts]
find-outliers-pyarrow = "detectors.find_outliers_pyarrow:main"
find-outliers-duckdb = "detectors.find_outliers_duckdb:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["detectors*"]

